# fontnorm

./: Cargo.toml  README.md
src/: batch.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs  report.rs
src/core/: diff.rs  family.rs  filename.rs  mod.rs  model.rs  names.rs  resolve.rs  signals.rs  style_words.rs  weight.rs
src/font_io/: mod.rs  monospace.rs  read.rs  tables.rs  write.rs
tests/: batch_cases.rs  defects.rs  family_cases.rs  filename_cases.rs  names_cases.rs  resolve_cases.rs  roundtrip.rs  style_words_cases.rs
tests/common/: mod.rs
